Se agregaron animaciones

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 				</div>
 				<nav class="menu">
 					<a href="#">Inicio</a>
-					<a href="contacto.html">Contacto</a>
-					<a href="imagenes.html">Imagenes</a>
+					<a href="#">Acerca de nosotros</a>
+					<a href="#">Imagenes</a>
 				</nav>
 			</header>
 
@@ -110,8 +110,8 @@
 						</p>
 					</div>
 				</div>
-				<nav class="menu">
-					<a href="contacto.html">Contacto</a>
+				<nav class="contacto">
+					<a href="#">Contacto</a>
 				</nav>
 			</aside>
 
