--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Inicio-DivinoPernil</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700&display=swap" rel="stylesheet"/>
+		<script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="./css/estilos.css" />
 	</head>
 	<body>
@@ -16,9 +17,9 @@
 					<h1>DivinoPernil</h1>
 				</div>
 				<nav class="menu">
-					<a href="#">Inicio</a>
-					<a href="#">Acerca de nosotros</a>
-					<a href="#">Imagenes</a>
+					<a href="/index.html">Inicio</a>
+					<a href="/nosotros.html">Acerca de nosotros</a>
+					<a href="/imagenes.html">Imagenes</a>
 				</nav>
 			</header>
 
@@ -27,23 +28,23 @@
 					<div>
 						<h2 class="titulo">Recomendacion del chef</h2>
 						<p class="fecha">
-							<time>Abril 06, 2022</time>
+							<time>Mayo 15, 2022</time>
 						</p> 
 					</div>
 					<p class="extracto">
 						Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt illo possimus atque fuga harum consequuntur reprehenderit, asperiores aperiam commodi, repellat deserunt odio repellendus iste recusandae vitae officiis rem eaque esse!
 					</p>
-					<a href="#" class="btn-link">Leer más</a>
+					<a href="https://elgourmet.com/receta/ensalada-de-marisco" class="btn-link">Leer más</a>
 				</div>
-				<div class="contenedor-thumbnail">
-					<img src="./img/img9.jpeg" alt=""/>
+				<div class="acerca-de">
+					<img src="./img/img9.jpeg" alt="Mariscos"/>
 				</div>
 			</article>
 
 			<main class="contenido">
 				<article class="articulo">
 					<div class="contenedor-thumbnail">
-						<img src="img/img15.jpeg" alt="" />
+						<img src="img/img15.jpeg" alt="Papas rusticas" />
 					</div>
 					<div class="contenedor-texto">
 						<div>
@@ -56,13 +57,13 @@
 							Lorem ipsum, dolor sit amet coknsectetur
 							adipisicing elit. Cupiditate, autem animi.
 						</p>
-						<a href="#" class="btn-link">Leer más</a>
+						<a href="https://www.gourmet.cl/recetas/papas-rusticas-al-horno-2/" class="btn-link">Leer más</a>
 					</div>
 				</article>
 
 				<article class="articulo">
 					<div class="contenedor-thumbnail">
-						<img src="img/img16.jpeg" alt="" />
+						<img src="img/img16.jpeg" alt="Ensaladas" />
 					</div>
 					<div class="contenedor-texto">
 						<div>
@@ -74,13 +75,13 @@
 							Lorem ipsum, dolor sit amet coknsectetur
 							adipisicing elit. Cupiditate, autem animi.
 						</p>
-						<a href="#" class="btn-link">Leer más</a>
+						<a href="https://www.directoalpaladar.com/recetas-de-legumbres-y-verduras/21-recetas-ensaladas-internacionales-muy-refrescantes-para-viajar-a-traves-cocina-comiendo-saludable" class="btn-link">Leer más</a>
 					</div>
 				</article>
 
 				<article class="articulo">
 					<div class="contenedor-thumbnail">
-						<img src="img/img8.jpeg" alt=""/>
+						<img src="img/img8.jpeg" alt="Salsas"/>
 					</div>
 					<div class="contenedor-texto">
 						<div>
@@ -92,7 +93,7 @@
 							Lorem ipsum, dolor sit amet coknsectetur
 							adipisicing elit. Cupiditate, autem animi.
 						</p>
-						<a href="#" class="btn-link">Leer más</a>
+						<a href="https://recetinas.com/8-recetas-de-salsas-caseras-para-sustituir-la-mayonesa/" class="btn-link">Leer más</a>
 					</div>
 				</article>
 			</main>
@@ -100,7 +101,7 @@
 			<aside class="sidebar">
 				
 				<div class="acerca-de">
-					<img src="img/img7.jpeg" class="img-perfil" alt=""/>
+					<img src="img/img7.jpeg" class="img-perfil" alt="Cocinero"/>
 
 					<div class="bio">
 						<p class="titulo">¡Hola!</p>
@@ -111,7 +112,7 @@
 					</div>
 				</div>
 				<nav class="contacto">
-					<a href="#">Contacto</a>
+					<a href="/contacto.html">Contacto</a>
 				</nav>
 			</aside>
 
