--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Inicio-DivinoPernil</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700&display=swap" rel="stylesheet"/>
-		<script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="./css/estilos.css" />
 	</head>
 	<body>
@@ -17,9 +16,9 @@
 					<h1>DivinoPernil</h1>
 				</div>
 				<nav class="menu">
-					<a href="/index.html">Inicio</a>
-					<a href="/nosotros.html">Acerca de nosotros</a>
-					<a href="/imagenes.html">Imagenes</a>
+					<a href="./index.html">Inicio</a>
+					<a href="./nosotros.html">Acerca de nosotros</a>
+					<a href="./imagenes.html">Imagenes</a>
 				</nav>
 			</header>
 
