--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 					<h1>DivinoPernil</h1>
 				</div>
 				<nav class="menu">
-					<a href="./index.html">Inicio</a>
-					<a href="./nosotros.html">Acerca de nosotros</a>
-					<a href="./imagenes.html">Imagenes</a>
+					<a href="../animaciones/index.html">Inicio</a>
+					<a href="../animaciones/nosotros.html">Acerca de nosotros</a>
+					<a href="../animaciones/imagenes.html">Imagenes</a>
 				</nav>
 			</header>
 
@@ -111,7 +111,7 @@
 					</div>
 				</div>
 				<nav class="contacto">
-					<a href="/contacto.html">Contacto</a>
+					<a href="../animaciones/contacto.html">Contacto</a>
 				</nav>
 			</aside>
 
